[project]
name = "jeju-travel-planner"
version = "0.1.0"
description = "AI-powered Jeju travel planner with LangGraph and Flet"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "flet[all]>=0.85,<0.86",
    "langchain-openai>=1.3,<1.4",
    "langgraph>=1.2,<1.3",
    "langgraph-checkpoint-sqlite>=3.1,<3.2",
    "pydantic>=2.11,<3.0",
    "python-dotenv>=1.1,<2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30,<7.0",
    "pytest>=8.0,<9.0",
    "ruff>=0.12,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py313"